clusters/sirius/apps/poker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poker
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ""
  labels:
    external-dns-exclude: "true"
spec:
  rules:
  - host: poker.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poker
            port:
              name: http
